--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,25 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Desktop/FerranHibernate/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-core-4.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-core-5.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-entitymanager-4.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-entitymanager-5.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/jandex-2.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/javassist-3.15.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/jboss-logging-3.1.0.CR2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/jboss-transaction-api_1.1_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BrandonAlexis/Documents/GitHub/ORMHIBERNATE/lib/mysql-connector-java-5.1.5-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
